Added state or union territory code to the tax entity
